[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/enemies/enemy_spider.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 13, 13 )

[node name="spider" type="KinematicBody2D" groups=[
"spider",
]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 2.46154, 0, 0, 2.46154, -4.40157e-07, -4.40157e-07 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
movement_speed = 192
flippedH = false
gravity_enabled = false
max_HP = 10
hp = 10
invulnerability_time = 5
uses_invulnerability_timer = true
has_invulnarable_animation = false
invulnerable_animation_player = "SecondAnimationPlayer"
damage = 5
does_fall = true

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -4.40157e-07, -4.40157e-07 )
transform/scale = Vector2( 2.46154, 2.46154 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="front_ground_detector" type="RayCast2D" parent="."]

transform/pos = Vector2( 32, 0 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 5

[node name="back_ground_detector" type="RayCast2D" parent="."]

transform/pos = Vector2( -32, 0 )
enabled = true
cast_to = Vector2( 0, 50 )
layer_mask = 1
type_mask = 5

[node name="player_detector" type="RayCast2D" parent="."]

transform/pos = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 0, -800 )
layer_mask = 5
type_mask = 15

[node name="cobweb_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 5.0
one_shot = false
autostart = false

[connection signal="timeout" from="cobweb_timer" to="." method="_on_cobweb_timer_timeout"]


